--- a/2019_neurips_vigil/appendix_model.tex
+++ b/2019_neurips_vigil/appendix_model.tex
@@ -530,22 +530,22 @@ The answer is true in the last frame because the latest circle can be found in F
 \begin{figure}[!h]
 \begin{minipage}{0.25\textwidth}
 \centering
-\includegraphics[width=0.9\linewidth]{"../img/visualization/sample 2/Frame 1"}
+\includegraphics[width=0.9\linewidth]{"../img/visualization/experiment_run_20190917_022319/Frame 1"}
 \label{fig:frame-1}
 \end{minipage}\hfill
 \begin{minipage}{0.25\textwidth}
 	\centering
-	\includegraphics[width=0.9\linewidth]{"../img/visualization/sample 2/Frame 2"}
+	\includegraphics[width=0.9\linewidth]{"../img/visualization/experiment_run_20190917_022319/Frame 2"}
 	\label{fig:frame-1}
 \end{minipage}\hfill
 \begin{minipage}{0.25\textwidth}
 	\centering
-	\includegraphics[width=0.9\linewidth]{"../img/visualization/sample 2/Frame 3"}
+	\includegraphics[width=0.9\linewidth]{"../img/visualization/experiment_run_20190917_022319/Frame 3"}
 	\label{fig:frame-1}
 \end{minipage}\hfill
 \begin{minipage}{0.25\textwidth}
 	\centering
-	\includegraphics[width=0.9\linewidth]{"../img/visualization/sample 2/Frame 4"}
+	\includegraphics[width=0.9\linewidth]{"../img/visualization/experiment_run_20190917_022319/Frame 4"}
 		\label{fig:frame-1}
 \end{minipage}
 \caption{Sample sequence of input frames} 
@@ -559,7 +559,7 @@ In Step 1 of processing Frame 4 (see~\cref{fig:frame-4-step-1}), we see that the
 is, both in text and in image. We also see that the temporal classifier gives the highest weight to the context ``now''.
 \begin{figure}[!h]
 \centering
-  \includegraphics[width=\textwidth]{"../img/visualization/sample 2/Frame 4 Step 1"}
+  \includegraphics[width=\textwidth]{"../img/visualization/experiment_run_20190917_022319/Frame 4 Step 1"}
 \caption{State of SAMNet in a particular reasoning step} 
 \label{fig:frame-4-step-1}
 \end{figure}
@@ -570,7 +570,7 @@ and the temporal classification is ``latest'', there
 is no valid visual attention.
 \begin{figure}[!h]
 	\centering
-	\includegraphics[width=\textwidth]{"../img/visualization/sample 2/Frame 4 Step 6"}
+	\includegraphics[width=\textwidth]{"../img/visualization/experiment_run_20190917_022319/Frame 4 Step 6"}
 	\caption{State of SAMNet in a particular reasoning step} 
 	\label{fig:frame-4-step-6}
 \end{figure}
@@ -579,7 +579,7 @@ But in Step 6 of processing Frame 2 (see~\cref{fig:frame-2-step-6}),
 we see that the object representing the circle is where the attention is.
 \begin{figure}[!h]
 	\centering
-	\includegraphics[width=\textwidth]{"../img/visualization/sample 2/Frame 2 Step 6"}
+	\includegraphics[width=\textwidth]{"../img/visualization/experiment_run_20190917_022319/Frame 2 Step 6"}
 	\caption{State of SAMNet in a particular reasoning step} 
 	\label{fig:frame-2-step-6}
 \end{figure}
