--- a/2019_neurips_kr2ml/experiments.tex
+++ b/2019_neurips_kr2ml/experiments.tex
@@ -16,8 +16,8 @@ The main differences are the number of frames in the input sequence (4 vs. 8) an
 	& of   & memory & number of & of & of & of  \\
 	& frames & duration & distractors & training set & validation set & test set \\
 	\midrule
-	Canonical & 4 & 3 & 1 & 10000320 & 500016? & 500016 \\	
-	Hard  & 8 & 7 & 10 & 10000320 & 500016?  & 500016 \\
+	Canonical & 4 & 3 & 1 & 10000320 & 500016 & 500016 \\	
+	Hard  & 8 & 7 & 10 & 10000320 & 500016  & 500016 \\
 	\bottomrule	
 \end{tabular}
 \label{tab:cog_variants}
@@ -37,7 +37,7 @@ The main differences are the number of frames in the input sequence (4 vs. 8) an
 In our experiments we have trained SAMNet using 8 reasoning steps and external memory having 8 address locations, each being a vector of 128 floats.
 We have also carried out experiments with different numbers of reasoning steps and memory size, but this goes beyond the scope of this paper.
 In here, we have focused on 22 classification tasks and compared our results with the baseline model.
-The most important results are highlighted in~\cref{fig:samnet_cog_detailed}, whereas full comparison with all accuracies can be found in the table in the Appendix.
+The most important results are highlighted in~\cref{fig:samnet_cog_detailed}, whereas full comparison with all accuracies can be found in~\cref{tab:all-results} at the end of the section.
 
 \begin{figure}[htbp]
 	\centering
@@ -76,6 +76,56 @@ For sanity check, in the first column, we report both the best-achieved score an
 In a pure \textit{transfer learning} setup (second column), our model shows enormous generalization ability, reaching 91.6\% accuracy on the test set.
 We have also tested both models in a setup where the model trained on a Canonical variant underwent additional fine-tuning (for a single epoch) on the Hard variant (third column).
 In this case, the SAMNet model also reached much better performance, and, interestingly, achieved better scores from the model trained and tested exclusively on the Hard variant.
+
+\begin{table}[htb]
+	\caption{COG test set accuracies for SAMNet \& COG models. Below `paper' denotes results from~\cite{yang2018dataset} 
+		while `code' denotes results of our experiments using their implementation~\cite{yang2018implement}}
+	\centering
+	\begin{adjustbox}{width=\textwidth}
+		\begin{tabular}{lcccccccccc}
+			\toprule
+			Model & & SAMNet & && && COG&& \\
+			\cmidrule{2-5} \cmidrule{7-11} 
+			&&&&& & paper & ours & ours & paper&\\
+			\cmidrule{7-9} \cmidrule{10-11}
+			Trained on       & canonical & canonical & canonical & hard &           &  canonical  & canonical  & canonical & hard \\ 
+			Fine tuned on  & - & - & hard  & - &           & -   & - & hard & - \\ 
+			Tested on        & canonical & hard & hard & hard &            &canonical  & hard & hard & hard  \\ 
+			\midrule
+			
+			Overall accuracy & 98.0 & 91.6 & 96.5  & 96.1 &           & 97.6  & 65.9 & 78.1& 80.1 \\ 
+			
+			\midrule 
+			
+			AndCompareColor			&	93.5	&	82.7	&	89.2	&	80.6	&	&	81.9	&	57.1	&	60.7	&	51.4	 \\
+			AndCompareShape			&	93.2	&	83.7	&	89.7	&	80.1	&	&	80.0	&	53.1	&	50.3	&	50.7 \\
+			AndSimpleCompareColor		&	99.2	&	85.3	&	97.6	&	99.4	&	&	99.7	&	53.4	&	77.1	&	78.2 \\
+			AndSimpleCompareShape		&	99.2	&	85.8	&	97.6	&	99.2	&	&	100.0	&	56.7	&	79.3	&	77.9 \\
+			CompareColor			&	98.1	&	89.3	&	95.9	&	99.7	&	&	99.2	&	56.1	&	67.9	&	50.1 \\
+			CompareShape			&	98.0	&	89.7	&	95.9	&	99.2	&	&	99.4	&	66.8	&	65.4	&	50.5	 \\
+			Exist				&	100.0	&	99.7	&	99.8	&	99.8	&	&	100.0	&	63.5	&	96.1	&	99.3 \\
+			ExistColor			&	100.0	&	99.6	&	99.9	&	99.9	&	&	99.0	&	70.9	&	99	&	89.8 \\
+			ExistColorOf			&	99.9	&	95.5	&	99.7	&	99.8	&	&	99.7	&	51.5	&	76.1	&	73.1 \\
+			ExistColorSpace			&	94.1	&	88.8	&	91.0	&	90.8	&	&	98.9	&	72.8	&	77.3	&	89.2 \\
+			ExistLastColorSameShape		&	99.5	&	99.4	&	99.4	&	98.0	&	&	100.0	&	65.0	&	62.5	&	50.4 \\
+			ExistLastObjectSameObject	&	97.3	&	97.5	&	97.7	&	97.5	&	&	98.0	&	77.5	&	61.7	&	60.2 \\
+			ExistLastShapeSameColor		&	98.2	&	98.5	&	98.8	&	97.5	&	&	100.0	&	87.8	&	60.4	&	50.3 \\
+			ExistShape			&	100.0	&	99.5	&	100.0	&	100.0	&	&	100.0	&	77.1	&	98.2	&	92.5 \\
+			ExistShapeOf			&	99.4	&	95.9	&	99.2	&	99.2	&	&	100.0	&	52.7	&	74.7	&	72.70 \\
+			ExistShapeSpace			&	93.4	&	87.5	&	91.1	&	90.5	&	&	97.7	&	70	&	89.8	&	89.80 \\
+			ExistSpace			&	95.3	&	89.7	&	93.2	&	93.3	&	&	98.9	&	71.1	&	88.1	&	92.8 \\
+			GetColor			&	100.0	&	95.8	&	99.9	&	100.0	&	&	100.0	&	71.4	&	83.1	&	97.9 \\
+			GetColorSpace			&	98.0	&	90.0	&	95.0	&	95.4	&	&	98.2	&	71.8	&	73.	&	92.3 \\
+			GetShape			&	100.0	&	97.3	&	99.9	&	99.9	&	&	100.0	&	83.5	&	89.2	&	97.1	 \\
+			GetShapeSpace			&	97.5	&	89.4	&	93.9	&	94.3	&	&	98.1	&	78.7	&	77.3	&	90.3 \\
+			SimpleCompareShape		&	99.9	&	91.4	&	99.7	&	99.9	&	&	100.0	&	67.7	&	96.7	&	99.3 \\
+			SimpleCompareColor		&	100.0	&	91.6	&	99.80	&	99.9	&	&	100.0	&	64.2	&	90.4	&	99.3 \\
+			\bottomrule
+		\end{tabular}
+	\end{adjustbox}
+	\label{tab:all-results}
+\end{table}
+
 
 %we used the canonical (easy) and hard settings that alter the number of distractors and sequence length.  Since there was no baseline for these tests (train on canonical, test on hard), we ran our own experiments using the COG model provided by the authors.  SAMNet achieves the highest overall scores for all categories of experiments (\cref{fig:samnet_cog_overall_transfer}), especially for the tests run on the hard dataset.  Among the 22 classification tasks, we highlighted the two most difficult tasks that affect the overall score. 
 %We argue that the generalization capability of SAMNet is mainly due to the dynamic frame-by-frame processing of the input sequence. 
@@ -122,9 +172,9 @@ In this case, the SAMNet model also reached much better performance, and, intere
 \label{fig:example}  
 \end{figure}
 
-\subsection{Analysis of the reasoning strategy}
-As a result of training the SAMNet developed a quite complex reasoning strategy.
-We will illustrate the key reasoning steps taken by the model on the example presented in \cref{fig:example}.
+\subsection{Illustrating the multi-step reasoning and grounding of concepts including time}
+To illustrate the reasoning strategy developed by SAMNet including the grounding of concepts, we consider the example
+presented in \cref{fig:example}. For more details on this example, please see~
 We have decided to pick the sample from the "AndCompareColor" task, as, despite the clear improvement over the COG baseline model, our SAMNet model seems to still struggle with those type of questions.	
 
 First, let us analyze, independently of SAMNet, what are the key operations that one would need to perform in order to provide the correct answers. 
