--- a/2019_neurips_kr2ml/2019_kr2ml_samnet_main.tex
+++ b/2019_neurips_kr2ml/2019_kr2ml_samnet_main.tex
@@ -31,6 +31,7 @@
 \usepackage{cleveref}
 \crefname{figure}{Figure}{Figures}
 \crefname{table}{Table}{Tables}
+\crefname{appendix}{Appendix}{Appendices}
 
 \usepackage{enumitem}
 \setlist{leftmargin=*} 
