--- a/2019_neurips_kr2ml/experiments.tex
+++ b/2019_neurips_kr2ml/experiments.tex
@@ -132,6 +132,14 @@ In this case, the SAMNet model also reached much better performance, and, intere
 %The mechanisms introduced in SAMCell learn to operate independently of the total number of frames and allow to generalize to longer video lengths.
 %As shown in \cref{fig:samnet_cog_overall_transfer}, when trained on the easy dataset, SAMNet still performs 91.6\% when tested on the hard dataset, whereas COG drops from 97.6\% to 65.9\%   The visualization of the trained SAMNet model (see Appendix) indicates that the model learns the concept of time, helping it to control the flow of information from visual input to the memory.  Therefore, the memory is updated efficiently instead of storing all information across all frames.
 
+\subsection{Illustrating the multi-step reasoning and grounding of concepts including time}
+
+To illustrate the reasoning strategy developed by SAMNet including the grounding of concepts, we consider the example
+of \textbf{CompareColor} presented in \cref{fig:example}. 
+As a full step-by-step analysis (8 reasoning steps for each of 4 frames) would be tedious, we picked the four key steps
+of reasoning performed by SAMNet for the same example that are important for Frame~\textbf{4}.
+For more details on this example, please see~\cref{sec:append}.
+
 \captionsetup[subfigure]{labelformat=empty}
 \begin{figure}[htbp]
   \begin{center}
@@ -172,49 +180,23 @@ In this case, the SAMNet model also reached much better performance, and, intere
 \label{fig:example}  
 \end{figure}
 
-\subsection{Illustrating the multi-step reasoning and grounding of concepts including time}
-To illustrate the reasoning strategy developed by SAMNet including the grounding of concepts, we consider the example
-presented in \cref{fig:example}. For more details on this example, please see~
-We have decided to pick the sample from the "AndCompareColor" task, as, despite the clear improvement over the COG baseline model, our SAMNet model seems to still struggle with those type of questions.	
 
-First, let us analyze, independently of SAMNet, what are the key operations that one would need to perform in order to provide the correct answers. 
-As the question concerns both the \textbf{now} and \textbf{latest} temporal contexts, in the Frame \textbf{1} one should look for both \textbf{u} and \textbf{circle} objects, look at their colors (different), and provide the answer \textbf{false}.
-Next, one should also memorize the \textbf{pink circle} and move to next Frame.
-Analogically, in Frame \textbf{2} there are both objects present, both with different colors, so the answer is once again \textbf{false}.
-However, from that point we do not care anymore about the \textbf{pink circle} and should remember the \textbf{yellow circle} instead.
-This is of utmost importance for the following two frames, as there are no circles present there.
-So when analyzing Frames \textbf{3} and \textbf{4} one need to recall the \textbf{yellow circle} from the memory and compare its color with the color of \textbf{u}'s -- as in both cases they are yellow, thus  both answers should be \textbf{true}.
-
+First, we analyze the \textbf{6}-th reasoning step of Frame~\textbf{2}, presented~\cref{fig:frame-2-step-6}.
+Here the system clearly focuses its attention on the second object important from the point of view of the question: the \textbf{yellow circle}.
+Analogously, the question and visual attention are almost perfectly aligned with the word and object, besides, 
+the system does a decent job of capturing the time context \textbf{Latest} of the object.
+Finally, the ``Add New'' gate is on, indicating that the system has stored the \textbf{yellow circle} in external memory.
 \begin{figure}[!h]
 	\centering
-	\includegraphics[width=0.95\textwidth]{"../img/visualization/experiment_run_20190917_022319/Frame 2 Step 1"}
-	\caption{State of the SAM Cell after 1-st step of reasoning on Frame 2.} 
-	\label{fig:frame-2-step-1}
+	\includegraphics[width=0.95\textwidth]{"../img/visualization/experiment_run_20190917_022319/Frame 2 Step 6"}
+	\caption{State of the SAM Cell after 6-th step of reasoning on Frame 2.} 
+	\label{fig:frame-2-step-6}
 \end{figure}
 
-As full step-by-step analysis (8 reasoning steps for each of 4 frames) would significantly exceed the page limits, we have cherry picked four steps of reasoning performed by our SAMNet model.
-Let us start from \textbf{1}-st reasoning step on Frame \textbf{2}, as visualized in \cref{fig:frame-2-step-1} and focus on different aspects of the model.
-First, the attention over both the question and image is clearly focusing over the \textbf{u} -- despite we have never trained the system with "word \textbf{u}"-"visual object \textbf{u}" pairs, the SAM Network managed to develop visual grounding on its own.
-Second, the time context is clearly focused on \text{Now} -- once again, during the training we have never instructed that the system should pay attention to this (or any other) particular word and the system learned to catch the temporal context on its own (i.e. learned to use the provided mechanisms in the correct way).
-Third, as write head is always pointing at "free memory slot", we can notice that there is an object already stored in memory under address 1.
-This is the \textbf{pink circle} object memorized during the analysis of the Frame \textbf{1}.
-However, we can also notice that the 2nd slot seems to be partially "polluted" by the object from slot 1, which indicates that the write head was not perfectly focused on a single memory address (similarly to the current state).
 
-
-\begin{figure}[!h]
-\centering
-  \includegraphics[width=0.95\textwidth]{"../img/visualization/experiment_run_20190917_022319/Frame 2 Step 6"}
-\caption{State of the SAM Cell after 6-th step of reasoning on Frame 2.} 
-\label{fig:frame-2-step-6}
-\end{figure}
-
-Next, let us analyze the \textbf{6}-th reasoning step presented~\cref{fig:frame-2-step-6}.
-Here the system clearly focuses its attention on the second object important from the point of view of the question: the \textbf{yellow circle}.
-Analogically, the question and visual attention are almost perfectly aligned with the word and object, and, besides, the system  properly caught the time context of the object: \textbf{Latest}.
-Additionally, the "Add New" gate is on, the memory address 2 has a different content and write head moved to the next address.
-Those are clear indicators that the system has stored the \textbf{yellow circle} in the external memory.
-Sadly, also  in here we observe the "pollution" of addresses 3 and 4.
-
+Next, in the \textbf{1}-st reasoning step of Frame~\textbf{4}, presented in~\cref{fig:frame-4-step-1}, 
+we can once again observe that  system correctly grounded the visual object \textbf{u} and detected the most likely temporal context \textbf{Now} (still not extremely high indicating that the distinction may not be significant for this example).
+Besides that, we can notice that memory content remained more or less unchanged.
 \begin{figure}[!h]
 	\centering
 	\includegraphics[width=0.95\textwidth]{"../img/visualization/experiment_run_20190917_022319/Frame 4 Step 1"}
@@ -222,9 +204,14 @@ Sadly, also  in here we observe the "pollution" of addresses 3 and 4.
 	\label{fig:frame-4-step-1}
 \end{figure}
 
-Let us now fast-forward to analogical reasoning steps in Frame \textbf{6}.
-In the \textbf{1}-st reasoning step (\cref{fig:frame-4-step-1}) we can once again observe that  system correctly grounded the visual object \textbf{u} and detected the correct temporal context \textbf{Now}.
-Besides that, we can notice that memory content remained more or less unchanged, despite the fact that write head shifted to the next memory address (it also became more soft, pointing at addresses 4 and 5).
+
+In \textbf{6}-th reasoning step (\cref{fig:frame-4-step-6}) there are several things worth discussing.
+First, question attention is pointing at the word \textbf{circle}, but the visual attention is clearly avoiding all the objects. 
+This is because there is no circle.
+However, as the system properly identified the temporal context as \textbf{Latest}, instead of using the visual object, it uses the object retrieved from the memory---notice that the read head, despite not being perfectly crisp, is pointing at addresses 3-5, where it previously stored the \textbf{yellow circle} during the analysis of Frame \textbf{2}.
+Moreover, the ``Add New`` gate value is high enough so it once again updates the memory, with a void object. 
+(This would have been considered for future frames if they were to be present. 
+Because the content of those memory addresses is negligible, SAMNet  will still able return the correct prediction).
 
 \begin{figure}[!h]
 	\centering
@@ -232,10 +219,3 @@ Besides that, we can notice that memory content remained more or less unchanged,
 	\caption{State of the SAM Cell after 6-th step of reasoning on Frame 4.} 
 	\label{fig:frame-4-step-6}
 \end{figure}
-
-In \textbf{6}-th reasoning step (\cref{fig:frame-4-step-6}) there are several things worth discussing.
-First, question attention is pointing at the word \textbf{circle}, but the visual attention is clearly avoiding all the objects. 
-This is because there is no circle.
-However, as the system properly identified the temporal context as \textbf{Latest}, instead of using the visual object, it uses the object retrieved from the memory -- please notice that the read head, despite not being perfectly crisp, is pointing at addresses 3-5, where it previously stored the \textbf{yellow circle} during the analysis of Frame \textbf{2}.
-Moreover, the ``Add New`` gate value is high enough so it once again updates the memory, with void object. 
-But please notice that the content of those memory addresses is negligible, and at the end the SAMNet model is still able return the correct prediction.
